--- a/src/main/resources/templates/frontend/car/car-detail.html
+++ b/src/main/resources/templates/frontend/car/car-detail.html
@@ -17,17 +17,17 @@
 	<div class="container m-t-60">
 		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-20 p-lr-0-lg">
 			<!-- 國家 -->
-			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+			<a th:href="@{/cars/locations}" class="mtext-104 cl8 hov-cl1 trans-04">
 				<span th:text="${option.carLocation.country}"></span>
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
 			<!-- 縣市 -->
-			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+			<a th:href="@{/cars/locations}" class="mtext-104 cl8 hov-cl1 trans-04">
 				<span th:text="${option.carLocation.county}"></span>
 				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
 			</a>
 			<!-- 行政區 -->
-			<a th:href="@{/cars/locations}" class="stext-110 cl8 hov-cl1 trans-04">
+			<a th:href="@{/cars/locations}" class="mtext-104 cl8 hov-cl1 trans-04">
 				<span th:text="${option.carLocation.district}"></span>
 			</a>
 		</div>
@@ -35,7 +35,7 @@
 
 
 	<!-- Product Detail -->
-	<section class="sec-product-detail bg0 m-t-60 p-b-45">
+	<section class="sec-product-detail bg0 m-t-30 p-b-45">
 		<div class="container">
 			<div class="row">
 			
@@ -50,7 +50,7 @@
 				<div class="col-md-4 m-t-45 p-b-30">
 					<div class="p-t-5">
 						<!-- 據點名稱 -->
-						<p th:text="${option.carLocation.companyName}" class="stext-110 cl4"></p>
+						<p th:text="${option.carLocation.companyName}" class="mtext-104 cl4"></p>
 						<!-- 製造商與車款 -->
 						<h2 th:text="${option.carModel.makeCh + ' ' + option.carModel.makeEn + ' ' + option.carModel.model}" class="font-weight-bold cl2 js-name-detail py-4"></h2>
 						<div class="p-b-10">
@@ -87,13 +87,13 @@
 							<p class="my-3">此車款剩餘數量<span th:text="${option.amount}"></span></p>
 							<p class="">立即下訂把握優惠時刻!</p>
 							<div class="text-right">
-								<p class="my-3 cl1">省下<span th:text="${#numbers.formatDecimal(100-option.discount*100, 2,0)}"></span>%</p>
-								<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+								<p th:if="${option.price != option.priceSale}" class="my-3 cl1">省下<span th:text="${#numbers.formatDecimal(100-option.discount*100, 2,0)}"></span>%</p>
+								<del><span th:if="${option.price != option.priceSale}" class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
 								<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
 							</div>
 						</div>
 						<!-- 租車日期 -->
-						<div class="card-body p-t-33">
+						<div class="card-body">
 							<div class="row m-b-10">
 								<div class="col-3">
 									<p class="d-flex justify-content-center mb-3">
@@ -119,28 +119,32 @@
 				<div class="col-sm-10 col-md-8">
 					<h3 class="font-weight-bold my-4">租車地點</h3>
 <!-- 					<div id="map" style="width:100%; height: 500px;"></div> -->
-					<p class="ml-4">
+					<p class="ml-5 mtext-110 my-2">
 						供應商 : 
-						<span class="ml-4" th:text="${option.carLocation.companyName}"></span>
+						<span class="ml-4" id="companyName" th:text="${option.carLocation.companyName}"></span>
 					</p>
-					<p class="ml-4">
+					<p class="ml-5 mtext-110 my-2">
 						門市名稱 : 
-						<span class="ml-4" th:text="${option.carLocation.name}"></span>
+						<span class="ml-4" id="locationName" th:text="${option.carLocation.name}"></span>
 					</p>
-					<p class="ml-4">
+					<p class="ml-5 mtext-110 my-2">
 						門市地址 : 
 						<span class="ml-4" th:text="${option.carLocation.county + option.carLocation.district + option.carLocation.address}"></span>
 					</p>
-					<p class="ml-4">
+					<p class="ml-5 mtext-110 my-2">
 						門市電話 : 
 						<span class="ml-4" th:text="${option.carLocation.phone}"></span>
 					</p>
-					<p class="ml-4">
+					<p class="ml-5 mtext-110 my-2">
 						營業時間 : 
 						<span class="ml-4" th:text="${#strings.substring(option.carLocation.openTime,0,5)}"></span>
 						<span class="" > ~ </span>
 						<span class="" th:text="${#strings.substring(option.carLocation.closeTime,0,5)}"></span>
 					</p>
+						<span class="d-none" id="longitude" th:text="${option.carLocation.longitude}" ></span>
+						<span class="d-none" id="latitude" th:text="${option.carLocation.latitude}"></span>
+<!-- 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9287.767507107645!2d121.47990960479336!3d25.014923558598195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4ce2bcece78348c1!2z5rezIOWjveWPuOWJsueDuQ!5e0!3m2!1sen!2stw!4v1658661776349!5m2!1sen!2stw" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+					<div id='map' class="ml-5" style='width: 80%; height: 300px;'></div>
 				</div>
 				
 				
@@ -352,7 +356,7 @@
 
 	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js}"></script>
 	<script th:src="@{https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v1.0.0/mapbox-gl-language.js}"></script>
-	<script th:src="@{/js/clusterMap.js}" src="js/clusterMap.js"></script>
+	<script th:src="@{/js/carLocMap.js}" src="js/carLocMap.js"></script>
 	<script th:src="@{/js/comment.js}" src="js/comment.js"></script>
 	
 <!--    購物車script -->	
@@ -411,11 +415,6 @@
 		   });
 
 
-
-
-
-
-		
 		function getComments() {
 			let itemTb = $(".comments-itemId").attr('value');
 			let itemId = $(".comments-itemId").attr('id');
