--- a/src/main/resources/templates/frontend/car/car-location.html
+++ b/src/main/resources/templates/frontend/car/car-location.html
@@ -1,7 +1,47 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="frontend/partials/fragment :: head"></head>
+<head>
+    <title>GoTrip</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css}" rel="stylesheet"
+          integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"
+          integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+          crossorigin="anonymous"></link>
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/bootstrap/css/bootstrap.min.css}"
+          href="vendors/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/font-awesome-4.7.0/css/font-awesome.min.css}"
+          href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/iconic/css/material-design-iconic-font.min.css}"
+          href="fonts/iconic/css/material-design-iconic-font.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/fonts/linearicons-v1.0.0/icon-font.min.css}"
+          href="fonts/linearicons-v1.0.0/icon-font.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/animate/animate.css}" href="vendors/animate/animate.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/css-hamburgers/hamburgers.min.css}"
+          href="vendors/css-hamburgers/hamburgers.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/animsition/css/animsition.min.css}"
+          href="vendors/animsition/css/animsition.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/select2/select2.min.css}"
+          href="vendors/select2/select2.min.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/daterangepicker/daterangepicker.css}"
+          href="vendors/daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/slick/slick.css}" href="vendors/slick/slick.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/MagnificPopup/magnific-popup.css}"
+          href="vendors/MagnificPopup/magnific-popup.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/vendors/perfect-scrollbar/perfect-scrollbar.css}"
+          href="vendors/perfect-scrollbar/perfect-scrollbar.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/util.css}" href="css/util.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}" href="css/main.css">
+    <link rel="stylesheet" th:href="@{/vendors/datatables.net-bs4/dataTables.bootstrap4.css}"
+          href="vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+    <link rel="stylesheet" th:href="@{/js/select.dataTables.min.css}"
+          href="vendors/datatables.net-bs4/select.dataTables.min.css">
+    <link th:href='@{https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css}' rel='stylesheet'/>
+    <link rel="stylesheet" th:href="@{/css/stars.css}" href="../../css/stars.css">
+    <link rel="icon" type="image/png" th:href="@{/images/favicon.png}"/>
+</head>
 
 <body class="">
 	<!-- Header -->
@@ -56,12 +96,12 @@
 					<div th:each="location:${carLocations}" th:id="${location.id}" class="m-b-30  isotope-item">
 						<div class="card d-block">
 							<div class="row">
-								<div class="col-sm-4">
+								<div class="col-sm-5">
 									<div class="pos-relative hov-img0 card-img-left pr-0">
 										<img th:src="@{${location.image}}" style="height: 210px; object-fit: cover" alt="IMG-CAR">
 									</div>
 								</div>
-								<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14">
+								<div class="col-sm-7 card-body block2-txt flex-w flex-t p-t-14">
 									<div class="block2-txt-child1">
 										<div>
 											<span class="m-t-4" th:text="${location.county}"></span>
@@ -107,7 +147,7 @@
 													<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${option.carModel.seat}" class="p-r-15"></span>
 													<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${option.carModel.engine}+'cc'" class="p-r-5"></span> 
 													<div class="p-t-6 text-right">
-														<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+														<del><span class="cl3" th:if="${option.price != option.priceSale}" th:text="'TWD $' + ${option.price}"></span></del>
 														<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
 														<a th:href="@{/cars/options/{id}(id=${option.id})}" class="ml-3 btn btn-warning">選擇車款</a>
 													</div>
