--- a/src/main/resources/templates/frontend/car/car-model.html
+++ b/src/main/resources/templates/frontend/car/car-model.html
@@ -18,16 +18,16 @@
 			<div class="flex-w flex-sb-m p-b-52">
 				<h2 class="ltext-103 cl5 font-weight-bold p-b-15">車款找車</h2>
 				<div class="flex-w flex-l-m filter-tope-group m-tb-10">
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" data-filter="*">
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5 how-active1" id="filter-all">
 						所有租車選項
 					</button>
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".compact-car">
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" id="filter-compact" data-filter=".compact-car">
 						經濟轎車
 					</button>
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".mid-size-car">
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" id="filter-mid-size" data-filter=".mid-size-car">
 						豪華轎車
 					</button>
-					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" data-filter=".suv">
+					<button class="stext-106 cl6 hov1 bor3 trans-04 m-r-32 m-tb-5" id="filter-suv" data-filter=".suv">
 						休旅車/SUV
 					</button>
 				</div>
@@ -50,8 +50,8 @@
 				</div>
 				<!-- Block2 -->
 				<div class="isotope-grid col-sm-9">
-					<div th:each="car:${carModels}" class="m-b-30 isotope-item suv">
-						<div class="card d-block">
+					<div th:each="car:${carModels}" class="m-b-30 isotope-item compact" th:name="${car.type}">
+						<div class="card d-block" >
 							<div class="row">
 								<div class="col-sm-4">
 									<div class="px-3 pos-relative hov-img0 card-img-left" style="height: 180px">
@@ -62,13 +62,14 @@
 									<div class="block2-txt-child1">
 										<p th:text="${car.type}" class="pt-2"></p>
 										<p th:text="${car.makeCh + ' ' + car.makeEn + ' ' + car.model}" class="pr-3 fs-20 clblack font-weight-bold hov-cl1 trans-04 js-name-b2 p-b-6"></p>
-										<div class="rating-count" th:id="${car.id}" value="carRental">
-											尚無評論
-										</div>
+<!-- 										<div class="rating-count" th:id="${car.id}" value="carRental"> -->
+<!-- 											尚無評論 -->
+<!-- 										</div> -->
 										<i class="zmdi zmdi-flash"></i> <span th:text="${car.power}" class="p-r-15"></span>
 										<i class="zmdi zmdi-wb-auto"></i> 變速 <span th:text="${car.transmission}" class="p-r-15"></span>
+										<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${car.engine}+'cc'" class="p-r-5"></span><br>
 										<i class="zmdi zmdi-airline-seat-recline-extra"></i> 座位 <span th:text="${car.seat}" class="p-r-15"></span>
-										<i class="zmdi zmdi-car"></i> 排氣量 <span th:text="${car.engine}+'cc'" class="p-r-5"></span>
+										<i class="zmdi zmdi-case"></i> 行李 <span th:text="${car.suitcase+'大 + '+car.bag+'小'}" class="p-r-15"></span>
 										<div class="flex-r">
 											<button class="btn btn-warning text-right" type="button" data-toggle="collapse" th:data-target="'#collapseExample'+${car.id}" aria-expanded="false" aria-controls="collapseExample">
 												<i class="fa fa-angle-down" aria-hidden="true"></i>
@@ -81,12 +82,12 @@
 								<div th:each="option:${car.carOptions}" >
 									<div class="bor18 bg8">
 										<div class="row">
-											<div class="col-sm-4">
-												<div class="pos-relative hov-img0" style="height:180px">
+											<div class="col-sm-5">
+												<div class="pos-relative hov-img0" style="height:220px">
 													<img th:src="@{${option.carLocation.image}}" class=" mt-3" alt="IMG-CAR">
 												</div>
 											</div>
-											<div class="col-sm-8 card-body block2-txt flex-w flex-t p-t-14 ">
+											<div class="col-sm-7 card-body block2-txt flex-w flex-t p-t-14 ">
 												<div class="block2-txt-child1 mb-1">
 													<div>
 														<span class="m-t-4" th:text="${option.carLocation.county}"></span>
@@ -100,7 +101,7 @@
 														尚無評論
 													</div>
 													<div class="p-t-6 text-right">
-														<del><span class="cl3" th:text="'TWD $' + ${option.price}"></span></del>
+														<del><span class="cl3" th:if="${option.price != option.priceSale}" th:text="'TWD $' + ${option.price}"></span></del>
 														<span class="clblack mtext-109" th:text="'TWD $' + ${option.priceSale}"></span>
 														<a th:href="@{/cars/options/{id}(id=${option.id})}" class="ml-3 btn btn-warning">選擇車款</a>
 													</div>
@@ -127,7 +128,33 @@
 	<div th:replace="frontend/partials/fragment :: script"></div>
 	<script th:src="@{/vendors/isotope/isotope.pkgd.min.js}"></script>
 	<script th:src="@{/js/car.js}" src="js/car.js"></script>
-
+	<script type="text/javascript">
+	
+		$('#filter-all').on('click', function() {
+			$('div[name="經濟轎車"]').show()
+			$('div[name="豪華轎車"]').show()
+			$('div[name="休旅車/SUV"]').show()
+		})
+		$('#filter-compact').on('click', function() {
+			$('div[name="經濟轎車"]').show()
+			$('div[name="豪華轎車"]').hide()
+			$('div[name="休旅車/SUV"]').hide()
+		})
+		$('#filter-mid-size').on('click', function() {
+			$('div[name="經濟轎車"]').hide()
+			$('div[name="豪華轎車"]').show()
+			$('div[name="休旅車/SUV"]').hide()
+		})
+		
+		$('#filter-suv').on('click', function() {
+			$('div[name="經濟轎車"]').hide()
+			$('div[name="豪華轎車"]').hide()
+			$('div[name="休旅車/SUV"]').show()
+		})
+	
+	
+	
+	</script>
 </body>
 
 </html>
