--- a/src/main/resources/templates/frontend/ticket-detail.html
+++ b/src/main/resources/templates/frontend/ticket-detail.html
@@ -14,8 +14,8 @@
 	ul,li{list-style:none;}
 	.main{position:relative;margin:0px auto;width:1300px;overflow:hidden;}
 	.siderBar{float:left;width:25%;}
-	.siderBar li{margin-bottom:1px;padding:20px;line-height:50px;font-size:18px;background:#f0f0f0;cursor:pointer;transition:all .5s;}
-	.siderBar li.cur{color:#fff;background:#000;}
+	.siderBar li{margin-bottom:1px;padding:20px;line-height:50px;font-size:18px;background:#fff;cursor:pointer;transition:all .5s;}
+	.siderBar li.cur{color:#fff;background:rgb(157, 155, 155);}
 	.content{float:right;width:70%;}
 	.content .item{padding:50px 0;font-size:50px;color:rgb(157, 155, 155);text-align:center;overflow:hidden;}
 
@@ -172,12 +172,12 @@
 					<!-- <div class="p-l-25 p-r-30 p-lr-0-lg"> -->
 						<!-- <div class="slideshow"> -->
 							<!-- <div class="p-l-25 p-r-30 p-lr-0-lg"> -->
-								<div class="slideshow" style="height: 1000px; margin-top:15px;overflow: hidden">
+								<div class="slideshow" style="height: 100px; margin-top:15px;overflow: hidden">
 									<!-- 圖片可轉換 class="carousel-item active" -->
 									 <!-- <div class="carousel-item active">
 										<img th:src="@{/images/tickets/Xpark_1.jpg}"  class="d-block w-100" alt="...">
 									</div> -->
-									<div th:each="image:*{ticket.images}" class="slide" style="height: 1000px">
+									<div th:each="image:*{ticket.images}" class="slide" style="height: 100px">
 										<img th:src="@{${image}}" class="d-block w-100" alt="..."/>
 									</div>
 								</div>
@@ -249,7 +249,7 @@
 					</div>
 				</div>
 			<!-- </div> -->
-				<div class="col-md-4 p-b-30" style="margin-left:72%; height: 0px; bottom: 290px;">
+				<div class="col-md-4 p-b-30" style="margin-left:72%; height: 0px; bottom: 290px; z-index: 10;">
 					<div  style="border:1px  #eee solid;padding-top:20px;padding-bottom: 20px;padding-left: 20px;padding-right:20px">
 					<!-- <div class="p-t-5" style="border:1px  #eee solid"> -->
 						<span class="mtext-106 cl2 p-t-30">$</span>
@@ -276,10 +276,10 @@
 									</div>
 								</div>
 							</div>
-								<button
-									class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 plus-cart">
-									加入購物車
-								</button>
+							<button
+								class="flex-c-m stext-101 cl0 size-101 w-full bg1 bor1 hov-btn1 m-t-20 p-lr-15 trans-04 plus-cart">
+								加入購物車
+							</button>
 						</div>
 					</div>
 				</div>
@@ -347,7 +347,7 @@
 	</div> -->
 
 	<!-- sticky-bar -->
-	<main class="main">
+	<main class="main" style="z-index: 12;">
 	  <div class="container">	
 		<div class="siderBar" style="float:right;">
 			<div class="menu">
