--- a/src/main/resources/templates/backend/comment-list.html
+++ b/src/main/resources/templates/backend/comment-list.html
@@ -41,7 +41,7 @@
 								<div class="card-body">
 									<div class="d-flex justify-content-between align-baseline">
 										<div class="card-title">評論列表</div>
-										<a class="text-right btn btn-primary my-2" th:href="@{/backend/comments/form}">新增評論</a>
+										<a class="text-right btn btn-primary btn-sm my-2 font-weight-bold" th:href="@{/backend/comments/form}">新增評論</a>
 									</div>
 									<div class="table-responsive">
 										<table id="comment-table" class="display expandable-table table-hover w-100">
