--- a/src/main/resources/templates/backend/index.html
+++ b/src/main/resources/templates/backend/index.html
@@ -6,11 +6,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <title>GoTrip後台管理</title>
-<link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css" >
+<link rel="stylesheet" th:href="@{/css/vertical-layout-light/style.css}" href="css/vertical-layout-light/style.css">
 <link rel="stylesheet" th:href="@{/vendors/ti-icons/css/themify-icons.css}" href="vendors/ti-icons/css/themify-icons.css">
-<link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css" >
+<link rel="stylesheet" th:href="@{/vendors/feather/feather.css}" href="vendors/feather/feather.css">
 <link rel="shortcut icon" th:href="@{/images/favicon.png}" />
-<link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css}" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css" >
+<link rel="stylesheet" th:href="@{https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css}" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-bootstrap-4/bootstrap-4.css">
 <link rel="stylesheet" th:href="@{/css/stars.css}" href="../../css/stars.css">
 </head>
 
@@ -26,92 +26,97 @@
 			<div class="main-panel">
 				<div class="content-wrapper">
 					<div class="row">
-            <div class="col-md-12 grid-margin">
-              <div class="row">
-                <div class="col-12 col-xl-8 mb-4 mb-xl-0">
-                  <h3 class="font-weight-bold">Welcome Aamir</h3>
-                  <h6 class="font-weight-normal mb-0">All systems are running smoothly! You have <span class="text-primary">3 unread alerts!</span></h6>
-                </div>
-                <div class="col-12 col-xl-4">
-                 <div class="justify-content-end d-flex">
-                  <div class="dropdown flex-md-grow-1 flex-xl-grow-0">
-                    <button class="btn btn-sm btn-light bg-white dropdown-toggle" type="button" id="dropdownMenuDate2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                     <i class="mdi mdi-calendar"></i> Today (10 Jan 2021)
-                    </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuDate2">
-                      <a class="dropdown-item" href="#">January - March</a>
-                      <a class="dropdown-item" href="#">March - June</a>
-                      <a class="dropdown-item" href="#">June - August</a>
-                      <a class="dropdown-item" href="#">August - November</a>
-                    </div>
-                  </div>
-                 </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 grid-margin stretch-card">
-              <div class="card tale-bg">
-                <div class="card-people mt-auto">
-                  <img th:src="@{/images/dashboard/people.svg}" alt="people">
-                  <div class="weather-info">
-                    <div class="d-flex">
-                      <div>
-                        <h2 class="mb-0 font-weight-normal"><i class="icon-sun mr-2"></i>31<sup>C</sup></h2>
-                      </div>
-                      <div class="ml-2">
-                        <h4 class="location font-weight-normal">Bangalore</h4>
-                        <h6 class="font-weight-normal">India</h6>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6 grid-margin transparent">
-              <div class="row">
-                <div class="col-md-6 mb-4 stretch-card transparent">
-                  <div class="card card-tale">
-                    <div class="card-body">
-                      <p class="mb-4">Today’s Bookings</p>
-                      <p class="fs-30 mb-2">4006</p>
-                      <p>10.00% (30 days)</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 mb-4 stretch-card transparent">
-                  <div class="card card-dark-blue">
-                    <div class="card-body">
-                      <p class="mb-4">Total Bookings</p>
-                      <p class="fs-30 mb-2">61344</p>
-                      <p>22.00% (30 days)</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
-                  <div class="card card-light-blue">
-                    <div class="card-body">
-                      <p class="mb-4">Number of Meetings</p>
-                      <p class="fs-30 mb-2">34040</p>
-                      <p>2.00% (30 days)</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-md-6 stretch-card transparent">
-                  <div class="card card-light-danger">
-                    <div class="card-body">
-                      <p class="mb-4">Number of Clients</p>
-                      <p class="fs-30 mb-2">47033</p>
-                      <p>0.22% (30 days)</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+						<div class="col-md-12 grid-margin">
+							<div class="row">
+								<div class="col-12 col-xl-8 mb-4 mb-xl-0">
+									<h3 class="font-weight-bold">歡迎回來 管理員</h3>
+									<!--                   <h6 class="font-weight-normal mb-0">All systems are running smoothly! You have <span class="text-primary">3 unread alerts!</span></h6> -->
+								</div>
+								<div class="col-12 col-xl-4">
+									<div class="justify-content-end d-flex">
+										<div class="dropdown flex-md-grow-1 flex-xl-grow-0">
+											<button class="btn btn-sm btn-light bg-white dropdown-toggle"
+												type="button" id="dropdownMenuDate2" data-toggle="dropdown"
+												aria-haspopup="true" aria-expanded="true">
+												<i class="mdi mdi-calendar"></i> Today (10 Jan 2021)
+											</button>
+											<div class="dropdown-menu dropdown-menu-right"
+												aria-labelledby="dropdownMenuDate2">
+												<a class="dropdown-item" href="#">January - March</a> 
+												<a class="dropdown-item" href="#">March - June</a> 
+												<a class="dropdown-item" href="#">June - August</a> 
+												<a class="dropdown-item" href="#">August - November</a>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-md-6 grid-margin stretch-card">
+							<div class="card tale-bg">
+								<div class="card-people mt-auto">
+									<img th:src="@{/images/dashboard/people.svg}" alt="people">
+									<div class="weather-info">
+										<div class="d-flex">
+											<div>
+												<h2 class="mb-0 font-weight-normal">
+													<i class="icon-sun mr-2"></i>33<sup>C</sup>
+												</h2>
+											</div>
+											<div class="ml-2">
+												<h4 class="location font-weight-normal">台北</h4>
+												<h6 class="font-weight-normal">台灣</h6>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 grid-margin transparent">
+							<div class="row">
+								<div class="col-md-6 mb-4 stretch-card transparent">
+									<div class="card card-tale">
+										<div class="card-body">
+											<p class="mb-4">景點數量</p>
+											<p class="fs-30 mb-2" th:text="${#lists.size(tickets)}"></p>
+											<p>22.00% (30 days)</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 mb-4 stretch-card transparent">
+									<div class="card card-dark-blue">
+										<div class="card-body">
+											<p class="mb-4">住宿數量</p>
+											<p class="fs-30 mb-2" th:text="${#lists.size(hotels)}"></p>
+											<p>2.00% (30 days)</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
+									<div class="card card-light-blue">
+										<div class="card-body">
+											<p class="mb-4">租車選項</p>
+											<p class="fs-30 mb-2" th:text="${#lists.size(cars)}"></p>
+											<p>0.22% (30 days)</p>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 stretch-card transparent">
+									<div class="card card-light-danger">
+										<div class="card-body">
+											<p class="mb-4">評論數量</p>
+											<p class="fs-30 mb-2" th:text="${#lists.size(comments)}"></p>
+											<p>0.22% (30 days)</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 
 
@@ -122,25 +127,14 @@
 			</div>
 		</div>
 	</div>
-	<!-- container-scroller -->
-	<!-- plugins:js -->
-
-	<!--   <script src="../../vendors/typeahead.js/typeahead.bundle.min.js"></script> -->
-	<!--   <script src="../../vendors/select2/select2.min.js"></script> -->
-
-	<script th:src="@{/vendors/js/vendor.bundle.base.js}"	src="vendors/js/vendor.bundle.base.js"></script>
+	
+	<script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
 	<script th:src="@{/js/off-canvas.js}" src="vendors/js/off-canvas.js"></script>
-	<script th:src="@{/js/hoverable-collapse.js}"	src="js/hoverable-collapse.js"></script>
+	<script th:src="@{/js/hoverable-collapse.js}" src="js/hoverable-collapse.js"></script>
 	<script th:src="@{/js/template.js}" src="js/template.js"></script>
 	<script th:src="@{/js/settings.js}" src="js/settings.js"></script>
-
-	<!--   <script src="../../js/file-upload.js"></script> -->
-	<!--   <script src="../../js/typeahead.js"></script> -->
-	<!--   <script src="../../js/select2.js"></script> -->
 	<script th:src="@{/vendors/sweetalert/sweetalert.min.js}"></script>
-	<script th:src="@{/js/comment.js}"></script>
-
-	<!-- End custom js for this page-->
+	
 </body>
 
 </html>
